redis/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
    app: redis
  type: NodePort
  ports:
    - name: redis
      port: 6379
      nodePort: 6379
      targetPort: 6379
